<?xml version="1.0"?>
<package format="3">
  <name>geo_transformer</name>
  <version>0.0.1</version>
  <description>ROS2 wrapper for GeographicLib to convert between GPS and local coordinates</description>
  <maintainer email="s1234.email@example.com">Sahil</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Interface group (must be outside <export> too!) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
